css/main.css
html {
  box-sizing: border-box;
  font: normal 100%/1.5 Georgia, serif;
  color: #2f2d13;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

header {
  background-color: #ffe500;
  padding: .2em .5em .3em;
}

h1 {
  margin: 0;
  text-align: center;
  font-family: "Sigmar One", cursive;
  font-size: 3rem;
  color: #b20953;
}

.nav {
  margin: 0;
  padding: 0;
  list-style-type: none;
  text-align: center;
}

.nav li {
  display: inline;
}

.nav a {
  font-size: 1.125rem;
  color: #fff;
  display: inline-block;
  padding: .2em .5em .3em;
  background-color: #b2a212;
  border-radius: 4px;
  text-decoration: none;
}

.nav a:hover {
  background-color: #cc1465;
}

h2 {
  display: inline-block;
  margin: .3em;
  padding: 0 .75em;
  text-align: left;
  font-family: "Sigmar One", cursive;
  font-size: 1.875rem;
  color: #b20953;
}

img {
  display: block;
  width: 100%;
  margin: .3em;
}

p {
  margin: .3rem;
  display: inline-block;
  padding: 0 .75em;
}

footer {
  background-color: #ffe500;
  padding: .75em;
  text-align: center;
  font-size: .75rem;
}

.nav .current {
  background-color: #b20953;
}

